--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-
+    
     <% if current_user %>
-      <script>
+      <script type="text/javascript">
         window.currentUser = {
-          "id": <%= current_user.id %>,
-          "email": <%= current_user.email %>
+          id: <%= current_user.id %>,
+          email: "<%= current_user.email %>"
         };
       </script>
     <% end %>
