Work on getting a video clip as the background for the splash page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script type="text/javascript">
+      window.movies = "<%= image_url('movies.mp4') %>";
+    </script>
     
     <% if current_user %>
       <script type="text/javascript">
