Test different videos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag 'application' %>
 
     <script type="text/javascript">
-      window.movies = "<%= image_url('movies.mp4') %>";
+      window.remote = "<%= image_url('remote.mp4') %>";
     </script>
     
     <% if current_user %>
