Work on styling and persist email information across a two-part form

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,3 +1,9 @@
-.user-form {
+.signup-form {
+    display: block;
+    background-color: white;
+    color: black;
+}
+
+.login-form {
     display: block;
 }
