--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -8,5 +8,8 @@
 
 .splash-container {
   background: image-url('popcorn.jpg');
-  height: 100vh;
+  height: 800px;
+  width: 700px;
+  margin: 0 auto;
+  text-align: center;
 }
