--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
     <script type="text/javascript">
       window.splash = "<%= image_url('splash.mp4') %>";
-      window.hitflix = "<%= image_url('hitflix.png') %>";
+      window.logo = "<%= image_url('home2.png') %>";
       window.home = "<%= image_url('netflix-home.jpg') %>";
     </script>
     
