--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -24,6 +24,7 @@ time, mark, audio, video {
 	color: white;
 	font-family: 'Open Sans', sans-serif;
 	background-color: black;
+	text-decoration: none;
 }
 :focus {
   outline: 0;
