--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -7,9 +7,38 @@
 }
 
 .splash-container {
-  background: image-url('popcorn.jpg');
-  height: 800px;
-  width: 700px;
+  // background: image-url('netflix-home.jpg');
+  // background-size: cover;
+  
   margin: 0 auto;
   text-align: center;
+  height: 100vh;
+}
+
+.splash-background {
+  width: 100%;
+  height: 100%;
+  // object-fit: cover;
+}
+
+.overlay-card {
+  background: rgba(0,0,0,.4);
+  position: absolute;
+  // z-index: 1;
+  top: 20%;
+  height: 100%;
+  width: 100%;
+}
+
+// .get-started {
+// }
+
+.overlay-card input {
+  padding: 10px;
+}
+
+.overlay-card a {
+  background-color: red;
+  padding: 9px;
+  margin-left: 1px;
 }
