--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -9,36 +9,50 @@
 .splash-container {
   // background: image-url('netflix-home.jpg');
   // background-size: cover;
-  
-  margin: 0 auto;
+  color: white;
+  background-color: black;
+  // margin: 0 auto;
   text-align: center;
   height: 100vh;
+  display: flex;
 }
 
 .splash-background {
   width: 100%;
   height: 100%;
   // object-fit: cover;
+  // position: relative;
 }
 
 .overlay-card {
   background: rgba(0,0,0,.4);
   position: absolute;
-  // z-index: 1;
-  top: 20%;
+  // z-index: 5;
+  top: 9%;
   height: 100%;
   width: 100%;
 }
 
 // .get-started {
 // }
+.overlay-card button {
+  background-color: red;
+  padding: 13px;
+  margin-left: 1px;
+  color: white;
+}
 
-.overlay-card input {
+#email {
   padding: 10px;
 }
 
-.overlay-card a {
-  background-color: red;
-  padding: 9px;
-  margin-left: 1px;
+.error-message {
+  color: #E78E08;
+  size: 10px;
 }
+
+// .overlay-card a {
+//   background-color: red;
+//   padding: 9px;
+//   margin-left: 1px;
+// }
