--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -21,10 +21,11 @@ time, mark, audio, video {
   	font-family: inherit;
 	vertical-align: baseline;
 	/* color: inherit; */
-	color: white;
+	/* color: white; */
 	font-family: 'Open Sans', sans-serif;
-	background-color: black;
+	/* background-color: black; */
 	text-decoration: none;
+	box-sizing: border-box;
 }
 :focus {
   outline: 0;
