--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -1,15 +1,14 @@
-.navbar-container {
-    background-color: black;
-    
-}
 
 .navbar {
     display: flex;
     justify-content: space-between;
-    // border: 1px solid black;
+    position: absolute;
     padding: 20px 30px;
-    // background-color: black;
-    background: linear-gradient(black, 70%, transparent);
+    align-content: center;
+    height: 90px;
+    width: 100vw;
+    // background: linear-gradient(black, 70%, transparent);
+    background: transparent;
 }
 
 .logo a {
