--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -36,7 +36,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	/* line-height: 1; */
 }
 ol, ul {
 	list-style: none;
@@ -66,7 +66,7 @@ textarea
 	vertical-align:middle;
 	white-space:normal;
 	background:none;
-	line-height:1;
+	/* line-height:1; */
 	
 	/* Browsers have different default form fonts */
 	/* font-size:13px;
